<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.dalekocian.satjug.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/jug_logo"
            android:contentDescription="@string/jug_logo"/>

        <TextView
            android:id="@+id/tvGroupName"
            style="@style/GroupTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/group_name"
            />

        <TextView
            android:id="@+id/tvLocation"
            style="@style/Margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_place"
            android:drawableStart="@drawable/ic_place"
            android:text="@string/satjug_location"/>

        <TextView
            android:id="@+id/tvPhone"
            style="@style/Margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="phone"
            android:drawableLeft="@drawable/ic_call"
            android:drawableStart="@drawable/ic_call"
            android:text="@string/satjug_phone"/>

        <TextView
            android:id="@+id/tvWebsite"
            style="@style/Margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawableLeft="@drawable/ic_language"
            android:drawableStart="@drawable/ic_language"
            android:text="@string/satjug_website"/>

        <TextView
            android:id="@+id/tvMeetupUrl"
            style="@style/Margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:drawableLeft="@drawable/meetup_icon"
            android:drawableStart="@drawable/meetup_icon"
            android:text="@string/jug_meetup_url"
            />

        <TextView
            android:id="@+id/tvDescription"
            style="@style/Desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/satjug_description"
            />
    </LinearLayout>
</ScrollView>